--- a/Python/modulo1_tema4_Py_00_indice.ipynb
+++ b/Python/modulo1_tema4_Py_00_indice.ipynb
@@ -4,9 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img align=\"left\" style=\"padding-right:10px;\" width=\"150\" src=\"www/320px-Star_Wars_Logo.svg.png\">\n",
-    "\n",
-    "*Este notebook forma parte del TEMA 1.4. HERRAMIENTAS DE ANÁLISI: PROGRAMACIÓN EN R Y PROGRAMACIÓN EN PYTHON del MÓDULO 1: HERRAMIENTAS BIG DATA del master Máster en Big Data & Data Science de la Universitat de Barcelona - IL3 - FORYMAT elaborado por Ferran Carrascosa Mallafrè.*"
+    "# TEMA 1.4.2 HERRAMIENTAS DE ANÁLISIS: PROGRAMACIÓN EN PYTHON"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Ferran Carrascosa Mallafrè*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img align=\"center\" style=\"padding-right:10px;\" src=\"www/320px-Star_Wars_Logo.svg.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Este notebook forma parte del Máster en Big Data & Data Science de la Universitat de Barcelona - IL3 - FORYMAT.*"
    ]
   },
   {
@@ -20,21 +39,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- [Introducción](modulo1_tema4_Py.ipynb)\n",
-    "- [Elementos básicos de Python](modulo1_tema4_Py_10_elem_bas.ipynb)\n",
-    "- [Gráficos con matplotlib](modulo1_tema4_Py_20_matplotlib.ipynb)\n",
-    "- [Colecciones de objetos](modulo1_tema4_Py_30_colec_obj.ipynb)\n",
-    "- [Control de flujo](modulo1_tema4_Py_40_contr_flujo.ipynb)\n",
-    "- [Gestión de datos](modulo1_tema4_Py_50_gest_dat.ipynb)\n",
-    "- [Anexo](modulo1_tema4_Py_60_anexo.ipynb)"
+    "### [Introducción](modulo1_tema4_Py.ipynb)\n",
+    "### [Elementos básicos de Python](modulo1_tema4_Py_10_elem_bas.ipynb)\n",
+    "### [Gráficos con matplotlib](modulo1_tema4_Py_20_matplotlib.ipynb)\n",
+    "### [Colecciones de objetos](modulo1_tema4_Py_30_colec_obj.ipynb)\n",
+    "- [Listas, tuplas y diccionarios](modulo1_tema4_Py_30_colec_obj.ipynb)\n",
+    "- [Numpy](modulo1_tema4_Py_31_numpy.ipynb)\n",
+    "- [Pandas](modulo1_tema4_Py_32_pandas.ipynb)\n",
+    "\n",
+    "### [Control de flujo](modulo1_tema4_Py_40_contr_flujo.ipynb)\n",
+    "### [Gestión de datos](modulo1_tema4_Py_50_gest_dat.ipynb)\n",
+    "### [Anexo: README de Python](modulo1_tema4_Py_60_anexo.ipynb)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mbdds_fc20_env",
+   "display_name": "mbdds_rpy20",
    "language": "python",
-   "name": "mbdds_fc20_env"
+   "name": "mbdds_rpy20"
   },
   "language_info": {
    "codemirror_mode": {
@@ -46,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
