--- a/R/modulo1_tema4_R_05_gest_dat.Rmd
+++ b/R/modulo1_tema4_R_05_gest_dat.Rmd
@@ -1,7 +1,7 @@
 
 ## GESTIÓN DE DATOS
 
-A continuación se presentan la funciones para la lectura/escritura de datos, cruce y construcción de tablas resumen. 
+A continuación, se presentan las funciones para la lectura/escritura de datos, cruce y construcción de tablas resumen. 
 
 ### IMPORTAR Y EXPORTAR DATOS
 
@@ -37,7 +37,7 @@ Los parámetros especificados son:
 - `sep`: El separador de columnas. Es habitual usar también ";" y "\\t" cuando es un tabulador.
 - `header`: Indica si la primera fila contiene el nombre de las variables o no.
 
-También es común el uso de `fileEncoding="Latin1"` cuando el fichero se ha creado con Windows y utiliza carácteres especiales de texto (tildes, ...).
+También es común el uso de `fileEncoding="Latin1"` cuando el fichero se ha creado con Windows y utiliza caracteres especiales de texto (tildes, ...).
 
 Dada la estructura del fichero, con `read.csv()` la carga es más simple.
 
@@ -45,7 +45,7 @@ Dada la estructura del fichero, con `read.csv()` la carga es más simple.
 mtcars <- read.csv("www/mtcars.csv")
 ```
 
-Cuando el csv es Europeo, "," decimal y ";" como separador, se utiliza `read.csv2()`.
+Cuando el csv es europeo, "," decimal y ";" como separador, se utiliza `read.csv2()`.
 
 Es una buena práctica verificar su carga con `dim()`, `head()` y `summary()`.
 
@@ -96,7 +96,7 @@ write.csv2(mtcars, file="www/mtcars2.csv", row.names=FALSE, na="")
 - `row.names`: Si no se especifica, por defecto, se inserta el número de fila.
 - `na`: Si no se especifica, introduce el texto `NA`.
 
-Observa como el nuevo csv ahora tiene el formato de csv Europeo.
+Observa como el nuevo csv ahora tiene el formato de csv europeo.
 
 ```{r, eval=FALSE}
 cat(paste0(readLines("www/mtcars2.csv", n = 6), collapse="\n"))
@@ -171,14 +171,14 @@ a <- c(5,2,9,4)
 sort(a)
 ```
 
-Lo mismo se puede hacer en dos pasos. Primero, con order() se obtienen los indices de ordenación.
+Lo mismo se puede hacer en dos pasos. Primero, con order() se obtienen los índices de ordenación.
 
 ```{r}
 indices_ordenacion <- order(a)
 indices_ordenacion
 ```
 
-Segundo se seleccionan los elmentos del vector `a` en ese orden.
+Segundo se seleccionan los elementos del vector `a` en ese orden.
 
 ```{r}
 a[indices_ordenacion]
@@ -313,7 +313,7 @@ options(knitr.kable.NA = '')
 
 ![](www/a_inner.png){width=115px}
 
-R, por defecto, ha definido `ID` y `X1` como campos clave del cruce. Esto es así, porqué ID es la única variable compartida. Veremos como modificar esto.
+R, ha seleccionado `ID` y `X1` como campos clave porque son las variables con nombres coincidentes en ambas tablas. Veremos cómo modificar esto.
 
 Otra decisión que R ha tomado, es que **sólo** ha recuperado los **registros** con valores de `ID` y `X1` **compartidos** en ambas tablas. Este comportamiento en el lenguaje SQL, es conocido como *INNER JOIN*.
 
@@ -369,11 +369,11 @@ options(knitr.kable.NA = '')
 
 ![](www/a_left.png){width=115px}
 
-Vemos que ID=1 ahora esta presente y ID=4 ha quedado descartado. También que ID=3 sólo aparece una vez. Este comportamiento en SQL, es conocido como LEFT JOIN .
+Vemos que ID=1 ahora está presente y ID=4 ha quedado descartado. También que ID=3 sólo aparece una vez. Este comportamiento en SQL, es conocido como LEFT JOIN .
 
 ###### RIGHT JOIN
 
-Para preservar **todos los valores de la tabla derecha** utliza `all.y=TRUE`. Este comportamiento en SQL es el conocido como *RIGHT JOIN*.
+Para preservar **todos los valores de la tabla derecha** utiliza `all.y=TRUE`. Este comportamiento en SQL es el conocido como *RIGHT JOIN*.
 
 ```{r}
 a_right <- merge(a1, a2, all.y = TRUE)
@@ -486,7 +486,7 @@ El parámetro `na.rm=TRUE` evita que las funciones resumen, devuelvan un NA debi
 mean(paises07Summ$pib_per_capita)
 ```
 
-La función `quantile()`, por si sola, puede calcular todos los valores, excepto la media.
+La función `quantile()`, por sí sola, puede calcular todos los valores, excepto la media.
 
 ```{r, eval=FALSE}
 quantile(paises07Summ$pib_per_capita, seq(0,1,1/4), na.rm=TRUE)
@@ -545,9 +545,9 @@ options(knitr.kable.NA = '')
 
 ![](www/paisSumm3.png){width=125px}
 
-> \<sabías que\>Asia es el continente con mayor número de países grandes (de mas de 30M de hab.)\</sabías que\>. 
+> \<sabías que\>Asia es el continente con mayor número de países grandes (de más de 30M de hab.)\</sabías que\>. 
 
-En muchas ocasiones, es útil tramear las variables numéricas en intervalos. En R utiliza `cut()`.
+En muchas ocasiones, es útil tramar las variables numéricas en intervalos. En R utiliza `cut()`.
 
 Vamos a crear la variable nivel de riqueza a partir del pib_per_capita cortando la variable por 1700$ y 18000$.
 
@@ -581,7 +581,7 @@ options(knitr.kable.NA = '')
 levels(paises07Summ$nivel_de_riqueza)
 ```
 
-Para modificar las etiquetas utiliza la la misma función `levels()`. 
+Para modificar las etiquetas utiliza la misma función `levels()`. 
 
 ```{r}
 levels(paises07Summ$nivel_de_riqueza) <- c("Pobres","Medios","Ricos")
@@ -636,7 +636,7 @@ agg2 <- aggregate(paises07[,c("poblacion"),drop=FALSE],
 
 > \<recuerda\>aggregate() permite calcular un mismo estadístico sobre varias variables segmentando por más de un eje.\</recuerda\>
 
-Se juntan ahora los dos agregados con merge() y se genera la variable combinada `continente_riqueza`.
+Se juntan ahora los dos agregados con `merge()` y se genera la variable combinada `continente_riqueza`.
 
 ```{r}
 agg3 <- merge(agg1,agg2)
@@ -662,7 +662,7 @@ options(knitr.kable.NA = '')
 
 El mismo gráfico visto para países, ahora, agregado a nivel de continente y riqueza.
 
-```{r, fig.cap='Contienentes (Fuente: Elaboracion propia, datos de Gapminder)'}
+```{r, fig.cap='Contienentes (Fuente: Elaboración propia, datos de Gapminder)'}
 ggplot(agg3, aes(x=pib_per_capita
                           , y=esperanza_de_vida
                           , label=continente_riqueza
@@ -671,7 +671,7 @@ ggplot(agg3, aes(x=pib_per_capita
   geom_point() +
   geom_label_repel(size=3, force=10) +
   scale_x_log10() +
-  labs(title="Esperanza de vida y riqueza por continente (no ponderado)")
+  labs(title="Continentes-riqueza en 2007 (no ponderado)")
 ```
 
 #### LA FAMILIA APPLY 
@@ -704,7 +704,7 @@ sapply(paises07, function(x) class(x))
 
 ##### APPLY
 
-calcula agregados sobre cada una de lo vectores marginas fila (`MARGIN = 1`), alternativamente columna (`MARGIN = 2`) de una matriz.
+Calcula agregados sobre cada una de los vectores marginas fila (`MARGIN = 1`), alternativamente columna (`MARGIN = 2`) de una matriz.
 
 ```{r}
 a <- matrix(1:10,ncol=2)
@@ -722,12 +722,12 @@ apply(a,2,sum)
 
 El universo de [Tydiverse](https://www.tidyverse.org/) consiste en una colección de packages de R orientados al Data Science. Se recomienda la consulta del libro online [R para Ciencia de Datos](https://es.r4ds.hadley.nz/index.html).  
 
-El package *dplyr*, al igual que *ggplot2*, está desarrollado por Hadley Wickham. Este paquete, supone un cambio de filosofia en la forma de trabajar con los datos y se está transformando en un nuevo estandar en R.
+El package *dplyr*, al igual que *ggplot2*, está desarrollado por Hadley Wickham. Este paquete, supone un cambio de filosofía en la forma de trabajar con los datos y se está transformando en un nuevo estándar en R.
 
 ##### DPLYR: ARRANGE, FILTER, SELECT
 
 - `arange`: Ordena los registros de un data frame.
-- `filter`: Filtra a partir de un conjunto condiciones logicas.
+- `filter`: Filtra a partir de un conjunto condiciones lógicas.
 - `select`: Selecciona las variables.
 
 > \<ejemplo\>Paises asiaticos con PIB per cápita inferior a 1000 $ en 2007.\</ejemplo\>
@@ -751,15 +751,15 @@ options(knitr.kable.NA = '')
 
 ![](www/pais07dplyr.png){width=200px}
 
-Las 3 comparten el hecho que no necesitan de comillas para referirse a las variables. También utilizan el operador `%>%` llamado *pipe*. Este sustituye el parámetro de entrada de datos. De esta forma, permite escribir las operaciones de izquierda a derecha facilitando así su lectura.
+Las 3 comparten el hecho que no necesitan de comillas para referirse a las variables. También utilizan el operador `%>%` llamado *pipe*. Éste sustituye el parámetro de entrada de datos. De esta forma, permite escribir las operaciones de izquierda a derecha facilitando así su lectura.
 
 ##### DPLYR: MUTATE, GROUP_BY, SUMMARISE
 
-- `mutate`: Crea o modifica las variables del dataframe.
+- `mutate`: Crea o modifica las variables del data frame.
 - `group_by`: Especifica una o varias variables de agrupación.
 - `summarise`: define los agregados de las variables originales.
 
-> \<ejemplo\>Espaeranza de vida y PIB per cápita medio por continente y año.\</ejemplo\>
+> \<ejemplo\>Esperanza de vida y PIB per cápita medio por continente y año.\</ejemplo\>
 
 ```{r, warning=FALSE, message=FALSE}
 continentes_anio <- paises %>% 
@@ -796,7 +796,7 @@ ggplot(continentes_anio, aes(x=pib_per_capita
   geom_path() +
   scale_x_log10() +
   geom_text_repel(aes(label=anio), size=2, color="black") +
-  labs(title="Esperanza de vida y riqueza por continente (ponderado)")
+  labs(title="Evolución continentes (ponderado)")
 ```
 
 ##### ACTIVIDAD GUIADA 1.5.
@@ -813,7 +813,7 @@ Adapta los comentarios solicitados en `15_actividad.R`, ejecuta y observa:
 
 ##### LUBRIDATE: GESTIÓN DE FECHAS Y HORARIOS
 
-Para obtener el dia actual con *lubridate* utiliza `today()`, día y hora con now().  
+Para obtener el día actual con *lubridate* utiliza `today()`, día y hora con now().  
 
 ```{r}
 library(lubridate)
@@ -833,7 +833,7 @@ as_datetime(today()) # Conversión
 
 ###### OBTENER COMPONENTES
 
-Para obtener los meses y dias e la semana en Castellano. 
+Para obtener los meses y días de la semana en Castellano. 
 
 ```{r}
 Sys.setlocale(locale="es_ES.UTF-8")
@@ -855,7 +855,7 @@ fechahora
 hour(fechahora) <- hour(fechahora) + 10
 fechahora
 ```
-También resulta interesante los distintos tipo de redondeo de fechas.
+También resulta interesante los distintos tipos de redondeo de fechas.
 
 ```{r}
 floor_date(fechahora, "month")
@@ -873,7 +873,7 @@ edad_h
 as.duration(edad_h)
 ```
 
-Ten cuidado! Están condicionados a cambios de huso horario (hivierno/verano). 
+¡Ten cuidado! Están condicionados a cambios de huso horario (hibierno/verano). 
 
 ```{r}
 fechahora <- ymd_hms("2020-03-28 15:11:23", tz = "Europe/Madrid")
@@ -882,7 +882,7 @@ fechahora + dhours(24)
 ```
 ###### PERIODOS
 
-Ne se miden en segundos si no directamente en la unidad definida.
+No se miden en segundos si no directamente en la unidad definida.
 
 ```{r}
 fechahora + hours(24)
